<resources>
    <string name="app_name">StarTrek_TriviaGame</string>
    <string name="Menu" />
    <string name="User">User</string>
    <string name="trivia_question">Trivia Question</string>
    <string name="score">Score</string>
    <string name="enter_your_name">Username</string>
    <string name="enter_your_password">Password</string>
    <string name="loginButton">Login</string>
    <string name="empty_not_saved">User not saved because it is empty</string>
    <string name="hint_word" >User</string>
    <string name="button_save" >Save</string>
    <string name="greetings_admin">Greetings, Admin!</string>
    <string name="play_game">Play Game</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_scores">View Scores</string>
    <string name="admin_tasks">Admin Tasks</string>
    <string name="greetings_user">Greetings, User!</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="startrek_trivia_game">StarTrek Trivia Game</string>
    <string name="welcome_to_the_star_trek_trivia_game">Welcome to the Star Trek Trivia Game!</string>
    <string name="what_is_picard_s_favorite_beverage_to_order_from_the_replicator">What is Picard\'s favorite beverage to order from the replicator?</string>
    <string name="coffee_black">Coffee, Black</string>
    <string name="tea_earl_grey_hot">Tea, Earl Grey, Hot</string>
    <string name="raktajino">Raktajino</string>
    <string name="romulan_ale">Romulan Ale</string>
    <string name="what_is_the_klingon_homeworld_called">What is the Klingon homeworld called?</string>
    <string name="cardassia_prime">Cardassia Prime</string>
    <string name="kronos">Kronos</string>
    <string name="qo_nos">Qo\'noS</string>
    <string name="romulus">Romulus</string>
    <string name="what_is_the_name_of_the_fictional_substance_that_powers_federation_starships">What is the name of the fictional substance that powers Federation starships?</string>
    <string name="dilithium">Dilithium</string>
    <string name="tritanium">Tritanium</string>
    <string name="unobtanium">Unobtanium</string>
    <string name="quantumium">Quantumium</string>
    <string name="what_is_the_iconic_phrase_that_borgs_often_say_when_assimilating_other_species">What is the iconic phrase that Borgs often say when assimilating other species?</string>
    <string name="we_are_the_collective">We are the Collective</string>
    <string name="we_are_the_borg">We are the Borg</string>
    <string name="you_will_be_assimilated">You will be assimilated</string>
    <string name="resistance_is_futile">Resistance is futile</string>
    <string name="what_is_the_currency_used_by_ferengis_often_referred_to_as_the_currency_of_the_galaxy">What is the currency used by Ferengis, often referred to as the currency of the galaxy?</string>
    <string name="credits">Credits</string>
    <string name="gold_pressed_latinium">Gold Pressed Latinium</string>
    <string name="quatloos">Quatloos</string>
    <string name="zek_dollars">Zek Dollars</string>
    <string name="make_it_so">Make it So</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="you_win">You Win!</string>
    <string name="your_score_is_0">Your score is: 0</string>
    <string name="refresh">Refresh</string>
    <string name="admin_tasks_page">Admin Tasks</string>
    <string name="select_user">selectUser</string>
    <string name="add_users">Add Users</string>
    <string name="remove">Remove</string>
    <string name="view_users">View Users</string>
    <string name="remove_users">Remove Users</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="add_user">Add User</string>
    <string name="update_users">Update Users</string>
    <string name="update_username">Update Username</string>
    <string name="update_password">Update Password</string>
    <string name="update_user">Update User</string>
    <string name="exitAdminTasks">Exit</string>
    <string name="score_history">Score history</string>
</resources>