<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_label_textview"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/registerUserNameTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/enter_your_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/registerPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp" />
</LinearLayout>