<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_background"
    tools:context=".TriviaGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/triviaGameTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tng_title"
            android:gravity="center"
            android:text="@string/welcome_to_the_star_trek_trivia_game"
            android:textColor="@color/starTrekOrange"
            android:textSize="45sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/picardTeaImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/picard_wrong_drink" />

        <TextView
            android:id="@+id/questionOneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_picard_s_favorite_beverage_to_order_from_the_replicator"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:background="@drawable/edittext_outline"/>

        <RadioGroup
            android:id="@+id/questionOneRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext_outline">

            <RadioButton
                android:id="@+id/questionOneRadioButtonOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee_black"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionOneRadioButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tea_earl_grey_hot"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionOneRadioButtonThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raktajino"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionOneRadioButtonFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/romulan_ale"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/kligonHomeworldImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/klingon" />

        <TextView
            android:id="@+id/questionTwoTextView"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_outline"
            android:paddingStart="8dp"
            android:text="@string/what_is_the_klingon_homeworld_called"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/questionTwoRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext_outline">

            <RadioButton
                android:id="@+id/questionTwoRadioButtonOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardassia_prime"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionTwoRadioButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kronos"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionTwoRadioButtonThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qo_nos"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionTwoRadioButtonFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/romulus"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/warpCoreImageView"
            android:layout_width="397dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/warpcore" />

        <TextView
            android:id="@+id/questionThreeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_the_name_of_the_fictional_substance_that_powers_federation_starships"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:background="@drawable/edittext_outline"/>

        <RadioGroup
            android:id="@+id/questionThreeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext_outline">

            <RadioButton
                android:id="@+id/questionThreeRadioButtonOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dilithium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionThreeRadioButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tritanium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionThreeRadioButtonThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unobtanium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionThreeRadioButtonFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantumium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/borgImageView"
            android:layout_width="411dp"
            android:layout_height="209dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/borg" />

        <TextView
            android:id="@+id/questionFourTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_the_iconic_phrase_that_borgs_often_say_when_assimilating_other_species"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:background="@drawable/edittext_outline"/>

        <RadioGroup
            android:id="@+id/questionFourRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext_outline">

            <RadioButton
                android:id="@+id/questionFourRadioButtonOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_are_the_collective"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionFourRadioButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_are_the_borg"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionFourRadioButtonThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_will_be_assimilated"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionFourRadioButtonFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resistance_is_futile"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/ferengiImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/quark" />

        <TextView
            android:id="@+id/questionFiveTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_the_currency_used_by_ferengis_often_referred_to_as_the_currency_of_the_galaxy"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:background="@drawable/edittext_outline"/>

        <RadioGroup
            android:id="@+id/questionFiveRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edittext_outline">

            <RadioButton
                android:id="@+id/questionFiveRadioButtonOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionFiveRadioButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gold_pressed_latinium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionFiveRadioButtonThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quatloos"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/questionFiveRadioButtonFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zek_dollars"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <Button
            android:id="@+id/submitAnswersButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#3b1298"
            android:fontFamily="@font/tng_title"
            android:text="@string/make_it_so"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#3b1298"
            android:fontFamily="@font/tng_title"
            android:text="@string/exit"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>