<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/startrek_trivia_game"
        android:textColor="@color/starTrekOrange"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/starrenegades_jr9va"/>

    <ImageView
        android:id="@+id/starTrekLoginImageView"
        android:layout_width="wrap_content"
        android:layout_height="218dp"
        android:layout_gravity="center"
        android:src="@drawable/star_trek_trivia_game_login" />

    <TextView
        android:id="@+id/login_label_textview"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/starTrekOrange"
        android:fontFamily="@font/starrenegades_jr9va"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:inputType="text"
        android:paddingStart="8dp"
        android:background="@drawable/edittext_outline"/>

    <EditText
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enter_your_password"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:paddingStart="8dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_outline"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/starrenegades_jr9va"
        android:textSize="25sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:fontFamily="@font/starrenegades_jr9va"
        android:textSize="25sp" />
</LinearLayout>