<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/stars_background"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tng_title"
        android:gravity="center"
        android:text="@string/you_win"
        android:textColor="@color/starTrekOrange"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/your_score_is_0"
        android:textColor="@color/starTrekOrange"
        android:fontFamily="@font/tng_title"
        android:textSize="40sp" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/tng_title"
        android:textSize="30sp"
        android:backgroundTint="#3b1298"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/tng_title"
        android:textSize="30sp"
        android:backgroundTint="#3b1298"
        android:text="@string/exit" />
</LinearLayout>