<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars_background"
    android:orientation="vertical"
    tools:context=".AdminLandingPageActivity">

    <TextView
        android:id="@+id/admin_label_textview"
        android:layout_width="400dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/tng_title"
        android:gravity="center"
        android:text="@string/greetings_admin"
        android:textColor="@color/starTrekOrange"
        android:textSize="47sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_play_game_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:backgroundTint="#3b1298"
        android:fontFamily="@font/tng_title"
        android:text="@string/play_game"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_label_textview" />

    <Button
        android:id="@+id/admin_view_scores_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:backgroundTint="#3b1298"
        android:fontFamily="@font/tng_title"
        android:text="@string/view_scores"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_play_game_button" />

    <Button
        android:id="@+id/admin_tasks_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:backgroundTint="#3b1298"
        android:fontFamily="@font/tng_title"
        android:text="@string/admin_tasks"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_view_scores_button" />

    <Button
        android:id="@+id/admin_logout_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:backgroundTint="#3b1298"
        android:fontFamily="@font/tng_title"
        android:text="@string/logout"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_tasks_button" />
</androidx.constraintlayout.widget.ConstraintLayout>